Create static skeleton to index.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title></title>
+    <title>Random Quote Generator</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./style.css">
   </head>
-
-  </head>
   <body>
-
+    <div class="container m-3">
+      <div id=""generatorButton" class="m-4">
+        <button >Generate Quote</button>
+      </div>
+      <div id="quoteContainer" class="m-5">
+        Quote displays here
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
