Create normalize css file.  Create stylesheet directory for css files.  Update index.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>Random Quote Generator</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./stylesheets/normalize.css
+    ">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
   </head>
   <body>
     <div class="container m-3">
