--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./stylesheets/normalize.css
     ">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
   </head>
-  <body>
-    <div class="container m-3">
-      <div id="buttonContainer" class="m-4">
-        <button id="generatorButton" >Generate Quote</button>
-      </div>
-      <div id="quoteContainer" class="m-5">
-        Quote displays here
-      </div>
-    </div>
+  <body class="container">
+    <header>
+      <h1>Random Quote Generator</h1>
+    </header>
+    <main>
+      <button id="generatorButton" >Generate Quote</button>
+      <section>
+        <p id="quote"></p>
+        <aside id="author">By: Kenn</aside>
+      </section>
+    </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
