--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     </header>
     <main>
       <button id="generatorButton" >Generate Quote</button>
-      <section>
+      <section class="group">
         <p id="quote"></p>
-        <aside id="author">By: Kenn</aside>
+        <aside id="author"></aside>
       </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
