Add css styles.

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="./stylesheets/normalize.css
     ">
-<!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
   </head>
-  <body class="container">
-    <header>
-      <h1>Random Quote Generator</h1>
-    </header>
-    <main>
-      <button id="generatorButton" >Generate Quote</button>
-      <section class="group">
-        <p id="quote"></p>
-        <aside id="author"></aside>
-      </section>
-    </main>
+  <body>
+    <div class="container">
+      <header>
+        <h1>Random Quote Generator</h1>
+      </header>
+      <main>
+        <button id="generatorButton" >Generate Quote</button>
+        <section class="quote-info">
+          <p id="quote"></p>
+          <aside id="author"></aside>
+        </section>
+      </main>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="./scripts/script.js"></script>
   </body>
