Add tweet image to index and add css style.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <section class="quote-info">
           <p id="quote"></p>
           <aside id="author"></aside>
+          <img id="tweet" src="./images/tweet.png" alt="tweet quote">
         </section>
       </main>
     </div>
