--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <section class="quote-info">
           <p id="quote"></p>
           <aside id="author"></aside>
-          <img id="tweet" src="./images/tweet.png" alt="tweet quote">
+          <a class="twitter-share-button"
+            href="https://twitter.com/intent/tweet?text=Hello%20world"
+            data-size="large"
+            target="_blank" >
+              <img id="tweet" src="./images/tweet.png" alt="tweet quote">
+          </a>
         </section>
       </main>
     </div>
