Create feature to tweet quote.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             href="https://twitter.com/intent/tweet?text=Hello%20world"
             data-size="large"
             target="_blank" >
-              <img id="tweet" src="./images/tweet.png" alt="tweet quote">
+              <img id="tweetQuote" src="./images/tweet.png" alt="tweet quote">
           </a>
         </section>
       </main>
